--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -3,21 +3,22 @@
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
    version="2.5">
+
+	<context-param>
+		<param-name>serverName</param-name>
+		<param-value>http://agnes.ostwall195.de:8180</param-value>
+	</context-param>
     
 	<filter>
 		<filter-name>CAS Authentication Filter</filter-name>
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
 			<param-name>casServerLoginUrl</param-name>
-			<param-value>http://agnes.ostwall195.de:8080/cas/login</param-value>
-		</init-param>
-		<init-param>
-			<param-name>serverName</param-name>
-			<param-value>http://agnes.ostwall195.de:8080</param-value>
+			<param-value>https://agnes.ostwall195.de:9443/cas/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>http://agnes.ostwall195.de:8080/hsarweb</param-value>
+			<param-value>http://agnes.ostwall195.de:8180/hsarweb</param-value>
 		</init-param>
 	</filter>
 
@@ -26,32 +27,32 @@
 		<filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
 		<init-param>
 			<param-name>casServerUrlPrefix</param-name>
-			<param-value>http://agnes.ostwall195.de:8080/cas</param-value>
+			<param-value>https://agnes.ostwall195.de:9443/cas</param-value>
 		</init-param>
 		<init-param>
-			<param-name>serverName</param-name>
-			<param-value>http://agnes.ostwall195.de:8080</param-value>
-		</init-param>
-		<init-param>
-			<param-name>proxyReceptorUrl</param-name>
-			<param-value>/proxyReceptor</param-value>
-		</init-param>
+        	<param-name>proxyReceptorUrl</param-name>
+            <param-value>/proxyCallback</param-value>
+        </init-param>
+        <init-param>
+        	<param-name>proxyCallbackUrl</param-name>
+            <param-value>https://agnes.ostwall195.de:9443/hsarweb/proxyCallback</param-value>
+        </init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>http://agnes.ostwall195.de:8080/hsarweb</param-value>
+			<param-value>http://agnes.ostwall195.de:8180/hsarweb</param-value>
 		</init-param>
 	</filter>
 	
-    <filter-mapping>
-        <filter-name>CAS Authentication Filter</filter-name>
-		<url-pattern>/*</url-pattern>
-    </filter-mapping>
-    
     <filter-mapping>
         <filter-name>CAS Validation Filter</filter-name>
 		<url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter-mapping>
+        <filter-name>CAS Authentication Filter</filter-name>
+		<url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
 	<servlet>
 	    <servlet-name>Faces Servlet</servlet-name>
 	    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
