--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-   version="2.5">
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+	
+	<display-name>HSAdmin</display-name>
 
 	<context-param>
 		<param-name>serverName</param-name>
@@ -16,7 +17,12 @@
 		<param-name>xmlrpcURL</param-name>
 		<param-value>https://agnes.ostwall195.de:9443/hsar/xmlrpc/hsadmin</param-value>
 	</context-param>
-    
+	<context-param>
+		<description>Vaadin production mode</description>
+		<param-name>productionMode</param-name>
+		<param-value>false</param-value>
+	</context-param>
+
 	<filter>
 		<filter-name>CAS Authentication Filter</filter-name>
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
@@ -26,7 +32,7 @@
 		</init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>http://agnes.ostwall195.de:8180/hsarweb</param-value>
+			<param-value>https://agnes.ostwall195.de:8443/HSAdmin</param-value>
 		</init-param>
 	</filter>
 
@@ -43,11 +49,11 @@
         </init-param>
         <init-param>
         	<param-name>proxyCallbackUrl</param-name>
-            <param-value>https://agnes.ostwall195.de:9443/hsarweb/proxyCallback</param-value>
+            <param-value>https://agnes.ostwall195.de:8443/HSAdmin/proxyCallback</param-value>
         </init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>http://agnes.ostwall195.de:8180/hsarweb</param-value>
+			<param-value>https://agnes.ostwall195.de:8443/HSAdmin</param-value>
 		</init-param>
 	</filter>
 	
@@ -60,20 +66,22 @@
         <filter-name>CAS Authentication Filter</filter-name>
 		<url-pattern>/*</url-pattern>
     </filter-mapping>
-    
-	<servlet>
-	    <servlet-name>Faces Servlet</servlet-name>
-	    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-	    <load-on-startup>1</load-on-startup>
-	</servlet>
-	
-	<servlet-mapping>
-	    <servlet-name>Faces Servlet</servlet-name>
-	    <url-pattern>*.html</url-pattern>
-	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>HSAdmin Web</servlet-name>
+		<servlet-class>com.vaadin.terminal.gwt.server.ApplicationServlet</servlet-class>
+		<init-param>
+			<description>Vaadin application class to start</description>
+			<param-name>application</param-name>
+			<param-value>de.hsadmin.web.DomainModule</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HSAdmin Web</servlet-name>
+		<url-pattern>/*</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
 </web-app>
