--- a/src/texts/domain.properties
+++ b/src/texts/domain.properties
@@ -4,5 +4,5 @@ user=admin
 pac=packet
 hive=host
 since=connected since
-title=domains
-icon=../runo/icons/16/document-web.png
+moduletitle=domains
+moduleicon=../runo/icons/16/document-web.png
