--- a/src/texts/emailaddress.properties
+++ b/src/texts/emailaddress.properties
@@ -7,5 +7,5 @@ target=target(s)
 admin=admin user
 pac=packet
 fulldomain=full domain
-title=email addresses
-icon=../runo/icons/16/email.png
+moduletitle=email addresses
+moduleicon=../runo/icons/16/email.png
