--- a/src/texts/emailalias.properties
+++ b/src/texts/emailalias.properties
@@ -2,5 +2,5 @@ id=identifier
 name=name
 target=target(s)
 pac=packet
-title=email aliases
-icon=../runo/icons/16/email-send.png
+moduletitle=email aliases
+moduleicon=../runo/icons/16/email-send.png
