generisches Formular fuer Update und Add begonnen

--- a/src/texts/emailaddress.properties
+++ b/src/texts/emailaddress.properties
@@ -1,5 +1,5 @@
 id=identifier
-emailaddress=adress
+emailaddress=address
 localpart=local part
 subdomain=subdomain
 domain=main domain
@@ -9,3 +9,4 @@ pac=packet
 fulldomain=full domain
 moduletitle=email addresses
 moduleicon=../runo/icons/16/email.png
+new=create address
