--- a/src/texts/user.properties
+++ b/src/texts/user.properties
@@ -8,4 +8,5 @@ pac=packet
 quota_softlimit=quota soft limit
 quota_hardlimit=quota hard limit
 moduletitle=unix user
+new=create user
 moduleicon=../runo/icons/16/users.png
