--- a/src/texts/main.properties
+++ b/src/texts/main.properties
@@ -4,3 +4,6 @@ delete=delete
 confirmdelete=confirm delete
 save=save
 abort=abort
+new=new
+impressum.label=Published by
+impressum.link=http://www.hostsharing.net/impressum
