--- a/src/texts/user.properties
+++ b/src/texts/user.properties
@@ -1,5 +1,7 @@
 id=identifier
 name=username
+password1=password
+password2=repeat password
 comment=comment
 shell=shell
 userid=numeric userid
@@ -9,4 +11,5 @@ quota_softlimit=quota soft limit
 quota_hardlimit=quota hard limit
 moduletitle=unix user
 new=create user
+update=update user
 moduleicon=../runo/icons/16/users.png
