--- a/src/texts/user.properties
+++ b/src/texts/user.properties
@@ -1,6 +1,7 @@
 id=identifier
 name=username
-password1=password
+password=password
+password1=new password
 password2=repeat password
 comment=comment
 shell=shell
