--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,11 +11,11 @@
 	</context-param>
 	<context-param>
 		<param-name>backendURL</param-name>
-		<param-value>https://agnes.ostwall195.de:9443/hsar/backend</param-value>
+		<param-value>https://config-dev.hostsharing.net:443/hsar/backend</param-value>
 	</context-param>
 	<context-param>
 		<param-name>xmlrpcURL</param-name>
-		<param-value>https://agnes.ostwall195.de:9443/hsar/xmlrpc/hsadmin</param-value>
+		<param-value>https://config-dev.hostsharing.net:443/hsar/xmlrpc/hsadmin</param-value>
 	</context-param>
 	<context-param>
 		<description>Vaadin production mode</description>
@@ -33,7 +33,7 @@
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
 			<param-name>casServerLoginUrl</param-name>
-			<param-value>https://agnes.ostwall195.de:9443/cas/login</param-value>
+			<param-value>https://login-dev.hostsharing.net:443/cas/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>service</param-name>
@@ -46,7 +46,7 @@
 		<filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
 		<init-param>
 			<param-name>casServerUrlPrefix</param-name>
-			<param-value>https://agnes.ostwall195.de:9443/cas</param-value>
+			<param-value>https://login-dev.hostsharing.net:443/cas</param-value>
 		</init-param>
 		<init-param>
         	<param-name>proxyReceptorUrl</param-name>
