Rollen-spezifische Module

--- a/src/texts/main.properties
+++ b/src/texts/main.properties
@@ -6,4 +6,11 @@ save=save
 abort=abort
 new=new
 impressum.label=Published by
-impressum.link=http://www.hostsharing.net/impressum
+impressum.link=https://www.hostsharing.net/impressum
+logo.link=https://www.hostsharing.net/logo.png
+modules.NONE=de.hsadmin.web.HomeModule
+modules.USER=de.hsadmin.web.HomeModule
+modules.DOM_ADMIN=de.hsadmin.web.DomainReadonlyModule,de.hsadmin.web.EMailAddressModule,de.hsadmin.web.HomeModule
+modules.PAC_ADMIN=de.hsadmin.web.UnixUserModule,de.hsadmin.web.DomainModule,de.hsadmin.web.EMailAddressModule,de.hsadmin.web.EMailAliasModule,de.hsadmin.web.QueueTaskModule
+modules.CUSTOMER=de.hsadmin.web.PacketReadonlyModule,de.hsadmin.web.UnixUserModule,de.hsadmin.web.DomainModule,de.hsadmin.web.EMailAddressModule,de.hsadmin.web.EMailAliasModule,de.hsadmin.web.QueueTaskModule
+modules.HOSTMASTER=de.hsadmin.web.PacketReadonlyModule,de.hsadmin.web.UnixUserModule,de.hsadmin.web.DomainModule,de.hsadmin.web.EMailAddressModule,de.hsadmin.web.EMailAliasModule,de.hsadmin.web.QueueTaskModule
