--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,25 +7,20 @@
 
 	<context-param>
 		<param-name>serverName</param-name>
-		<param-value>http://agnes.ostwall195.de:8180</param-value>
+		<param-value>http://agnes.ostwall195.de:8080</param-value>
 	</context-param>
 	<context-param>
 		<param-name>backendURL</param-name>
-		<param-value>https://config-dev.hostsharing.net:443/hsar/backend</param-value>
+		<param-value>https://agnes.ostwall195.de:9443/hsar/backend</param-value>
 	</context-param>
 	<context-param>
 		<param-name>xmlrpcURL</param-name>
-		<param-value>https://config-dev.hostsharing.net:443/hsar/xmlrpc/hsadmin</param-value>
+		<param-value>https://agnes.ostwall195.de:9443/hsar/xmlrpc/hsadmin</param-value>
 	</context-param>
 	<context-param>
 		<description>Vaadin production mode</description>
 		<param-name>productionMode</param-name>
 		<param-value>false</param-value>
-	</context-param>
-	<context-param>
-		<description>HSAdmin Module</description>
-		<param-name>hsarmodules</param-name>
-		<param-value>de.hsadmin.web.UnixUserModule,de.hsadmin.web.DomainModule,de.hsadmin.web.EMailAddressModule,de.hsadmin.web.EMailAliasModule,de.hsadmin.web.QueueTaskModule</param-value>
 	</context-param>
 
 	<filter>
@@ -33,7 +28,7 @@
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
 			<param-name>casServerLoginUrl</param-name>
-			<param-value>https://login-dev.hostsharing.net:443/cas/login</param-value>
+			<param-value>https://agnes.ostwall195.de:9443/cas/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>service</param-name>
@@ -46,7 +41,7 @@
 		<filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
 		<init-param>
 			<param-name>casServerUrlPrefix</param-name>
-			<param-value>https://login-dev.hostsharing.net:443/cas</param-value>
+			<param-value>https://agnes.ostwall195.de:9443/cas</param-value>
 		</init-param>
 		<init-param>
         	<param-name>proxyReceptorUrl</param-name>
