--- a/src/texts/pac.properties
+++ b/src/texts/pac.properties
@@ -1,7 +1,7 @@
 id=identifier
 name=packet
 curinetaddr=inet address
-created=created
+created=created on
 basepac=packet type
 components=packet options
 hive=host
