--- a/conf/WEB-INF/web.xml
+++ b/conf/WEB-INF/web.xml
@@ -11,11 +11,11 @@
 	</context-param>
 	<context-param>
 		<param-name>backendURL</param-name>
-		<param-value>https://agnes.ostwall195.de:9443/hsar/backend</param-value>
+		<param-value>https://@CONFIG_HOST@:@CONFIG_PORT@/hsar/backend</param-value>
 	</context-param>
 	<context-param>
 		<param-name>xmlrpcURL</param-name>
-		<param-value>https://agnes.ostwall195.de:9443/hsar/xmlrpc/hsadmin</param-value>
+		<param-value>https://@CONFIG_HOST@:@CONFIG_PORT@/hsar/xmlrpc/hsadmin</param-value>
 	</context-param>
 	<context-param>
 		<description>Vaadin production mode</description>
@@ -28,11 +28,11 @@
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
 			<param-name>casServerLoginUrl</param-name>
-			<param-value>https://agnes.ostwall195.de:9443/cas/login</param-value>
+			<param-value>https://@LOGIN_HOST@:@LOGIN_PORT@/cas/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>https://agnes.ostwall195.de:8443/hsarweb</param-value>
+			<param-value>https://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb</param-value>
 		</init-param>
 	</filter>
 
@@ -41,7 +41,7 @@
 		<filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
 		<init-param>
 			<param-name>casServerUrlPrefix</param-name>
-			<param-value>https://agnes.ostwall195.de:9443/cas</param-value>
+			<param-value>https://@LOGIN_HOST@:@LOGIN_PORT@/cas</param-value>
 		</init-param>
 		<init-param>
         	<param-name>proxyReceptorUrl</param-name>
@@ -49,11 +49,11 @@
         </init-param>
         <init-param>
         	<param-name>proxyCallbackUrl</param-name>
-            <param-value>https://agnes.ostwall195.de:8443/hsarweb/proxyCallback</param-value>
+            <param-value>https://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb/proxyCallback</param-value>
         </init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>https://agnes.ostwall195.de:8443/hsarweb</param-value>
+			<param-value>https://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb</param-value>
 		</init-param>
 	</filter>
 	
