--- a/conf/WEB-INF/web.xml
+++ b/conf/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<context-param>
 		<param-name>serverName</param-name>
-		<param-value>http://agnes.ostwall195.de:8080</param-value>
+		<param-value>https://@ADMIN_HOST@:@ADMIN_PORT@</param-value>
 	</context-param>
 	<context-param>
 		<param-name>backendURL</param-name>
@@ -68,6 +68,15 @@
     </filter-mapping>
 
 	<servlet>
+		<servlet-name>Logout Servlet</servlet-name>
+		<servlet-class>de.hsadmin.logout.LogoutServlet</servlet-class>
+		<init-param>
+			<param-name>redirect</param-name>
+			<param-value>https://@LOGIN_HOST@:@LOGIN_PORT@/cas/logout</param-value>
+		</init-param>
+	</servlet>
+	
+	<servlet>
 		<servlet-name>HSAdmin Web</servlet-name>
 		<servlet-class>com.vaadin.terminal.gwt.server.ApplicationServlet</servlet-class>
 		<init-param>
@@ -76,10 +85,17 @@
 			<param-value>de.hsadmin.web.MainApplication</param-value>
 		</init-param>
 	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Logout Servlet</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
+	
 	<servlet-mapping>
 		<servlet-name>HSAdmin Web</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
