--- a/src/texts/q.properties
+++ b/src/texts/q.properties
@@ -6,5 +6,5 @@ finished=finished
 user=user
 details=details
 exception=exception
-moduletitle=queue tasks
+moduletitle=queued tasks
 moduleicon=../runo/icons/16/attention.png
