--- a/src/texts/main_ksh.properties
+++ b/src/texts/main_ksh.properties
@@ -1,7 +1,7 @@
 applicationtitle=HSAdmin Projramm em Wäb
 update=Verändere
 delete=Fottschmiiße
-confirmdelete=Et Fottschmiiße beschtäätejje
+confirmdelete=Donn et Fottschmiiße beschtäätejje
 save=Faßhallde
 abort=Ophüüre
 new=Neu aanlääje
