--- a/src/texts/user_ksh.properties
+++ b/src/texts/user_ksh.properties
@@ -6,7 +6,7 @@ password2=et Paﬂwoot norr_ens
 comment=Aanm‰rkonge
 shell=d‰m Metmaacher sing Shell
 userid=d‰m Metmaacher sing Nommer 
-homedir=Home directory
+homedir=et Heimatverzeischneﬂ
 pac=Pak‰t
 quota_softlimit=de Warnjr‰nz vum Speischerplaz <1> MB
 quota_hardlimit=de haade Bovverjr‰nz vum Speischerplaz <1> MB
