--- a/conf/WEB-INF/web.xml
+++ b/conf/WEB-INF/web.xml
@@ -7,15 +7,15 @@
 
 	<context-param>
 		<param-name>serverName</param-name>
-		<param-value>https://@ADMIN_HOST@:@ADMIN_PORT@</param-value>
+		<param-value>@HTTPS@://@ADMIN_HOST@:@ADMIN_PORT@</param-value>
 	</context-param>
 	<context-param>
 		<param-name>backendURL</param-name>
-		<param-value>https://@CONFIG_HOST@:@CONFIG_PORT@/hsar/backend</param-value>
+		<param-value>@HTTPS@://@CONFIG_HOST@:@CONFIG_PORT@/hsar/backend</param-value>
 	</context-param>
 	<context-param>
 		<param-name>xmlrpcURL</param-name>
-		<param-value>https://@CONFIG_HOST@:@CONFIG_PORT@/hsar/xmlrpc/hsadmin</param-value>
+		<param-value>@HTTPS@://@CONFIG_HOST@:@CONFIG_PORT@/hsar/xmlrpc/hsadmin</param-value>
 	</context-param>
 	<context-param>
 		<description>Vaadin production mode</description>
@@ -28,11 +28,11 @@
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
 			<param-name>casServerLoginUrl</param-name>
-			<param-value>https://@LOGIN_HOST@:@LOGIN_PORT@/cas/login</param-value>
+			<param-value>@HTTPS@://@LOGIN_HOST@:@LOGIN_PORT@/cas/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>https://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb</param-value>
+			<param-value>@HTTPS@://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb</param-value>
 		</init-param>
 	</filter>
 
@@ -41,7 +41,7 @@
 		<filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
 		<init-param>
 			<param-name>casServerUrlPrefix</param-name>
-			<param-value>https://@LOGIN_HOST@:@LOGIN_PORT@/cas</param-value>
+			<param-value>@HTTPS@://@LOGIN_HOST@:@LOGIN_PORT@/cas</param-value>
 		</init-param>
 		<init-param>
         	<param-name>proxyReceptorUrl</param-name>
@@ -49,11 +49,11 @@
         </init-param>
         <init-param>
         	<param-name>proxyCallbackUrl</param-name>
-            <param-value>https://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb/proxyCallback</param-value>
+            <param-value>@HTTPS@://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb/proxyCallback</param-value>
         </init-param>
 		<init-param>
 			<param-name>service</param-name>
-			<param-value>https://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb</param-value>
+			<param-value>@HTTPS@://@ADMIN_HOST@:@ADMIN_PORT@/hsarweb</param-value>
 		</init-param>
 	</filter>
 	
@@ -66,13 +66,13 @@
         <filter-name>CAS Authentication Filter</filter-name>
 		<url-pattern>/*</url-pattern>
     </filter-mapping>
-
+		 
 	<servlet>
 		<servlet-name>Logout Servlet</servlet-name>
 		<servlet-class>de.hsadmin.logout.LogoutServlet</servlet-class>
 		<init-param>
 			<param-name>redirect</param-name>
-			<param-value>https://@LOGIN_HOST@:@LOGIN_PORT@/cas/logout</param-value>
+			<param-value>@HTTPS@://@LOGIN_HOST@:@LOGIN_PORT@/cas/logout</param-value>
 		</init-param>
 	</servlet>
 	
