--- a/conf/WEB-INF/web.xml
+++ b/conf/WEB-INF/web.xml
@@ -57,6 +57,7 @@
 		</init-param>
 	</filter>
 	
+
     <filter-mapping>
         <filter-name>CAS Validation Filter</filter-name>
 		<url-pattern>/*</url-pattern>
@@ -66,7 +67,7 @@
         <filter-name>CAS Authentication Filter</filter-name>
 		<url-pattern>/*</url-pattern>
     </filter-mapping>
-		 
+
 	<servlet>
 		<servlet-name>Logout Servlet</servlet-name>
 		<servlet-class>de.hsadmin.logout.LogoutServlet</servlet-class>
@@ -93,11 +94,15 @@
 	
 	<servlet-mapping>
 		<servlet-name>HSAdmin Web</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/MainApplication/*</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>HSAdmin Web</servlet-name>
+		<url-pattern>/VAADIN/*</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
