show objct name in delete confirm dialog

--- a/src/texts/emailaddress.properties
+++ b/src/texts/emailaddress.properties
@@ -11,3 +11,4 @@ moduletitle=email addresses
 moduleicon=../runo/icons/16/email.png
 new=create address
 update=update address
+delete=delete address
