--- a/src/texts/mysqldb.properties
+++ b/src/texts/mysqldb.properties
@@ -4,6 +4,7 @@ pac=packet
 encoding=encoding
 owner=owner
 moduletitle=mysql db
-new=create db
-update=update db
+new=create database
+update=database
+delete=delete database
 moduleicon=../hs/icons/table.png
