--- a/src/texts/postgresqldb.properties
+++ b/src/texts/postgresqldb.properties
@@ -4,6 +4,7 @@ pac=packet
 encoding=encoding
 owner=owner
 moduletitle=postgresql db
-new=create db
+new=create database
 update=database
+delete=delete database
 moduleicon=../hs/icons/database.png
