--- a/src/texts/postgresqluser.properties
+++ b/src/texts/postgresqluser.properties
@@ -7,4 +7,5 @@ pac=packet
 moduletitle=postgres user
 new=create user
 update=change password
+delete=delete user
 moduleicon=../hs/icons/database_key.png
