--- a/src/texts/user.properties
+++ b/src/texts/user.properties
@@ -13,4 +13,5 @@ quota_hardlimit=quota hard limit
 moduletitle=unix user
 new=create user
 update=update user
+delete=delete user
 moduleicon=../runo/icons/16/users.png
