--- a/src/texts/mysqluser.properties
+++ b/src/texts/mysqluser.properties
@@ -7,4 +7,5 @@ pac=packet
 moduletitle=mysql user
 new=create user
 update=change password
+delete=delete user
 moduleicon=../hs/icons/table_key.png
