--- a/src/texts/main.properties
+++ b/src/texts/main.properties
@@ -5,7 +5,7 @@ confirmdelete=confirm delete
 save=save
 abort=abort
 new=new
-runas=run as
+runas=<strong>select</strong><br />change user perspective
 modules.NONE=de.hsadmin.web.HomeModule
 modules.USER=de.hsadmin.web.HomeModule
 modules.DOM_ADMIN=de.hsadmin.web.DomainReadonlyModule,de.hsadmin.web.EMailAddressModule,de.hsadmin.web.HomeModule
