new logout button

--- a/src/texts/main.properties
+++ b/src/texts/main.properties
@@ -6,6 +6,7 @@ save=save
 abort=abort
 new=new
 runas=<strong>select</strong><br />change user perspective
+logout=logout
 modules.NONE=de.hsadmin.web.HomeModule
 modules.USER=de.hsadmin.web.HomeModule
 modules.DOM_ADMIN=de.hsadmin.web.DomainReadonlyModule,de.hsadmin.web.EMailAddressModule,de.hsadmin.web.HomeModule
