new edit widget pacprefixed-name

--- a/src/texts/user.properties
+++ b/src/texts/user.properties
@@ -1,5 +1,8 @@
 id=identifier
 name=username
+name.pacprefix=packet
+name.separator=-
+name.postfix=userpart
 password=password
 password1=new password
 password2=repeat password
