new editor widget for alias name

--- a/src/texts/emailalias.properties
+++ b/src/texts/emailalias.properties
@@ -1,5 +1,8 @@
 id=identifier
-name=name
+name=alias
+name.pacprefix=packet
+name.separator=-
+name.postfix=aliaspart
 target=target(s)
 pac=packet
 moduletitle=email aliases
