Domain-options shown and editable in web interface. Minor corrections elsewhere.

--- a/src/texts/home_ksh.properties
+++ b/src/texts/home_ksh.properties
@@ -4,7 +4,7 @@ password=et Paﬂwoot
 password1=neu Paﬂwoot
 password2=et Paﬂwoot norr_ens
 comment=Aanm‰rkonge
-shell=d‰m Metmaacher sing Shell
+shell=d‰m Metmaacher singe <code lang="en">shell</code>
 userid=d‰m Metmaacher sing Nommer 
 homedir=et Heimatverzeischneﬂ
 pac=Pak‰tt
