--- a/src/texts/domain.properties
+++ b/src/texts/domain.properties
@@ -1,6 +1,16 @@
 id=identifier
 name=domain
 user=admin
+domainoptions=domain options
+domainoption.backupmxforexternalmx=BackUpMxForExternalMx
+domainoption.greylisting=GreyListing
+domainoption.htdocsfallback=HtDocsFallback
+domainoption.includes=Includes
+domainoption.indexes=Indexes
+domainoption.multiviews=MultiViews
+domainoption.php=PHP
+yes=Yes
+no=No
 pac=packet
 hive=host
 since=connected since
