Reading values from the server

--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,74 @@
 /build/
 /build/
 /build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
+/build/
