--- a/.classpath
+++ b/.classpath
@@ -21,6 +21,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=hs.admin.peter&amp;ivyXmlPath=ivy.xml&amp;confs=widgetset-compile&amp;ivySettingsPath=%24%7Bworkspace_loc%3Ahs.admin.peter%2Fivysettings.xml%7D&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=hs.admin.peter&amp;ivyXmlPath=ivy.xml&amp;confs=nodeploy&amp;ivySettingsPath=%24%7Bworkspace_loc%3Ahs.admin.peter%2Fivysettings.xml%7D&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
-	<classpathentry exported="true" kind="lib" path="/admin.example-master/org-apache-xmlrpc.jar"/>
+	<classpathentry exported="true" kind="lib" path="org-apache-xmlrpc.jar"/>
+	<classpathentry exported="true" kind="lib" path="ws-commons-util-1.0.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
