fix project setup: package names, xmlrpc dependency to ivy, no testbench

--- a/ivy.xml
+++ b/ivy.xml
@@ -29,9 +29,6 @@
 		<!-- Servlet 3.0 API -->
 		<dependency org="javax.servlet" name="javax.servlet-api" rev="3.0.1" conf="nodeploy->default" />
 
-		<!-- TestBench 4 -->
-		<dependency org="com.vaadin" name="vaadin-testbench-api" rev="latest.release" conf="nodeploy -> default" />
-
 		<!-- Precompiled DefaultWidgetSet -->
 		<dependency org="com.vaadin" name="vaadin-client-compiled"
 			rev="&vaadin.version;" />
@@ -43,5 +40,8 @@
 		<!-- Compiler for custom widget sets. Should not be deployed -->
 		<dependency org="com.vaadin" name="vaadin-client-compiler"
 			rev="&vaadin.version;" conf="widgetset-compile->default" />
+			
+			<dependency org="org.apache.xmlrpc" name="xmlrpc-client" rev="3.1.3" />
+			
 	</dependencies>
 </ivy-module>
