--- a/.gitignore
+++ b/.gitignore
@@ -1,296 +1,2 @@
 /build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
-/build/
+/target/
