add german translation, refactoring

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -1,2 +1,86 @@
 main.panel.title=Welcome
 main.panel.text=to the hostsharing admin application
+user=User
+domain=Domain
+emailaddress=Email Address
+pac=Package
+emailalias=Email Alias
+mysqluser=MySql User
+mysqldb=MySql Database
+postgresqluser=Postgresql User
+postgresqldb=Postgresql Database
+name=Name
+basepac=Base package
+hive=Server
+unixUser=Unix User
+curINetAddr=Network Address
+user.name=Username
+user.pac=Package
+user.comment=Comment
+user.shell=Shell
+user.homedir=Home
+user.locked=Locked
+user.quotaSoftlimit=Quota soft limit
+user.quotaHardlimit=Quota hard limit
+emailalias.name=Email alias name
+emailalias.pac=Package
+emailalias.target=Target
+domain.name=Domain name
+domain.user=Domain User
+domain.since=Domain since
+domain.dnsMaster=DNS master
+domain.domainoptions=Domain options
+mysqluser.name=MySql username
+mysqluser.instance=MySql instance
+mysqluser.pac=MySql package
+mysqldb.name=MySql DB name
+mysqldb.instance=MySql DB instance
+mysqldb.owner=MySql owner
+mysqldb.pac=MySql package
+mysqldb.encoding=MySql encoding
+postgresqluser.name=Postgres username
+postgresqluser.instance=Postgres instance
+postgresqluser.pac=Postgres package
+postgresqldb.name=Postgres DB name
+postgresqldb.instance=Postgres DB instance
+postgresqldb.owner=Postgres owner
+postgresqldb.pac=Postgres package
+postgresqldb.encoding=Postgres encoding
+since=Since
+dnsMaster=DNS master
+domainoptions=Domain options
+emailaddress.localpart=Local part
+emailaddress.subdomain=Subdomain
+emailaddress.domain=Domain
+emailaddress.target=Target
+new.tooltip=New
+edit.tooltip=Edit
+delete.tooltip=Delete
+refresh.tooltip=Refresh
+help.tooltip=Help
+new=New
+edit=Edit
+delete=Delete
+refresh=Refresh
+customer=Customer
+contact=Contact
+cancel=Cancel
+ok=Ok
+mandat=Mandat
+password=Password
+login=Sign in
+comment=Comment
+shell=Shell
+quotaSoftlimit=Quota soft limit
+quotaHardlimit=Quota hard limit
+target=Target
+owner=Owner
+encoding=Encoding
+localpart=Local part
+subdomain=Subdomain
+domain=Domain
+target=Target
+homedir=Home
+locked=Locked
+instance=Instance
+emptySelectionMessage=Please select a record to
