--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -68,7 +68,8 @@ cancel=Cancel
 ok=Ok
 mandat=Mandat
 password=Password
-login=Sign in
+login.title=Sign in
+login.button=Sign in
 comment=Comment
 shell=Shell
 quotaSoftlimit=Quota soft limit
