initial toolbar, working logout button

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -70,6 +70,7 @@ mandat=Mandat
 password=Password
 login.title=Sign in
 login.button=Sign in
+logout.tooltip=Sign out
 comment=Comment
 shell=Shell
 quotaSoftlimit=Quota soft limit
