property names in api are lowercase names

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -12,8 +12,8 @@ postgresqldb=Postgresql Database
 name=Name
 basepac=Base package
 hive=Server
-unixUser=Unix User
-curINetAddr=Network Address
+unixuser=Unix User
+curinetaddr=Network Address
 user.name=Username
 user.pac=Package
 user.comment=Comment
