quota property names have changed

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -20,8 +20,8 @@ user.comment=Comment
 user.shell=Shell
 user.homedir=Home
 user.locked=Locked
-user.quotaSoftlimit=Quota soft limit
-user.quotaHardlimit=Quota hard limit
+user.quota_softlimit=Quota soft limit
+user.quota_hardlimit=Quota hard limit
 emailalias.name=Email alias name
 emailalias.pac=Package
 emailalias.target=Target
@@ -73,8 +73,8 @@ login.button=Sign in
 logout.tooltip=Sign out
 comment=Comment
 shell=Shell
-quotaSoftlimit=Quota soft limit
-quotaHardlimit=Quota hard limit
+quota_softlimit=Quota soft limit
+quota_hardlimit=Quota hard limit
 target=Target
 owner=Owner
 encoding=Encoding
