EMailTargetEditor work for now

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -53,6 +53,10 @@ emailaddress.localpart=Local part
 emailaddress.subdomain=Subdomain
 emailaddress.domain=Domain
 emailaddress.target=Target
+emailaddress.target=Target
+emailtarget.alias=Alias
+emailtarget.email=EMail
+emailtarget.postbox=Postbox
 new.tooltip=New
 edit.tooltip=Edit
 delete.tooltip=Delete
