DomainOptionsEditor working, fixes on EMailTargetEditor

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -30,6 +30,12 @@ domain.user=Domain User
 domain.since=Domain since
 domain.dnsMaster=DNS master
 domain.domainoptions=Domain options
+domainoption.greylisting=greylisting
+domainoption.multiviews=multiviews
+domainoption.indexes=indexes
+domainoption.htdocsfallback=htdocsfallback
+domainoption.includes=includes
+domainoption.backupmxforexternalmx=backupmxforexternalmx
 mysqluser.name=MySql username
 mysqluser.instance=MySql instance
 mysqluser.pac=MySql package
