add missing text resources

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -96,3 +96,73 @@ homedir=Home
 locked=Locked
 instance=Instance
 emptySelectionMessage=Please select a record to
+
+
+memberNo=Member No
+memberRole=Role
+memberSince=Member since
+memberUntil=Member Until
+authorContract=Author Contract
+nonDiscContract=Non Disclosure Contract
+sharesUpdated=Shares Update Date
+sharesSigned=Shared Signed
+free=free
+exemptVAT=Exempt VAT
+indicatorVAT=Indicator VAT
+uidVAT=UID VAT
+contact.customer=Member uid
+contact.salut=Salutation
+contact.firstName=First name
+contact.lastName=Last name
+contact.title=Title
+contact.firma=Organization
+contact.co=c/o
+contact.street=Street
+contact.zipCode=ZIP
+contact.city=City
+contact.country=Country
+contact.phonePrivate=Phone private
+contact.phoneOffice=Phone office
+contact.phoneMobile=Phone mobile
+contact.fax=Fax
+contact.email=Email
+contact.roles=Roles
+salut=Salutation
+firstName=First name
+lastName=Last name
+title=Title
+firma=Organization
+co=c/o
+street=Street
+zipCode=ZIP
+city=City
+country=Country
+phonePrivate=Phone private
+phoneOffice=Phone office
+phoneMobile=Phone mobile
+fax=Fax
+email=Email
+roles=Roles
+mandat.customer=Member uid
+mandat.bankCustomer=Bank customer
+mandat.bankName=Bank name
+mandat.bankIBAN=IBAN
+mandat.bankBIC=BIC
+mandat.mandatRef=Mandat ref
+mandat.mandatSigned=Date signed
+mandat.mandatSince=Date since
+mandat.mandatUntil=Date until
+mandat.mandatUsed=Date used
+bankCustomer=Bank customer
+bankName=Bank name
+bankIBAN=IBAN
+bankBIC=BIC
+mandatRef=Mandat ref
+mandatSigned=Date signed
+mandatSince=Date since
+mandatUntil=Date until
+mandatUsed=Date used
+pac.name=Packet name
+pac.basepac=Packet type
+pac.hive=Packet server
+pac.curinetaddr=IPv4 address
