add link to old web-ui

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -1,5 +1,6 @@
 main.panel.title=Welcome
 main.panel.text=to the hostsharing admin application
+main.panel.link_to_old=Link to the old HSAdmin-UI
 user=User
 domain=Domain
 emailaddress=Email Address
