replace string Login-Kennung

--- a/src/main/resources/de/hsadmin/web/main.properties
+++ b/src/main/resources/de/hsadmin/web/main.properties
@@ -13,7 +13,7 @@ postgresqldb=Postgresql Database
 name=Name
 basepac=Base package
 hive=Server
-unixuser=Unix User
+unixuser=User/Mailbox
 curinetaddr=Network Address
 user.name=Username
 user.pac=Package
@@ -97,8 +97,6 @@ homedir=Home
 locked=Locked
 instance=Instance
 emptySelectionMessage=Please select a record to
-
-
 memberNo=Member No
 memberRole=Role
 memberSince=Member since
