--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.hostsharing</groupId>
-	<artifactId>admin.web</artifactId>
+	<artifactId>hs.hsadmin.web</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hs.hsadmin.web</name>
